--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "telegram-time-bot",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "description": "Time zone converter bot for distributed teams with customizable cities per chat",
   "dependencies": {
-    "grammy": "^1.19.2"
+    "grammy": "^1.19.2",
+    "@vercel/kv": "^1.0.1"
   }
 }
