--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "description": "Time zone converter bot for distributed teams with customizable cities per chat",
   "dependencies": {
     "grammy": "^1.19.2",
-    "@vercel/kv": "^1.0.1"
+    "ioredis": "^5.3.2"
   }
 }
